<resources>
    <string name="app_name">Digital Agenda</string>
    <string name="create">Create Contact</string>
    <string name="list">List Contacts</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="cell_phone">CellPhone</string>
    <string name="Save">Save</string>
    <string name="done">Saved Successfully</string>
    <string name="no_records">No Records to Show</string>

    <string-array name="Menu">
        <item>@string/create</item>
        <item>@string/list</item>
    </string-array>
    <string name="required">Required</string>

</resources>
